Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   <title>HTML Tables</title>
 </head>
 <body>
-
-  <!-- Write your HTML here -->
+<table>
+  <tr>
+    <th>City</th>
+    <td>New York</td>
+    <td>Los Angeles</td>
+    <td>Chicago</td>
+  </tr>
+  
+</table>
   
 </body>
 </html>
