Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
     <td>New York</td>
     <td>Los Angeles</td>
     <td>Chicago</td>
+    <td>Houston</td>
   </tr>
-  
-</table>
-  
+  <tr>
+    <th>State</th>
+    <td>California</td>
+    <td>Illinois</td>
+    <td>Texas</td>
+    >2017</tr>
+  <tr>
+ <th>2017 estimate</th>
+ <td>8,622,698</td>
+ <td>3,999,759</td>
+ <td>2,716,450</td>
+ </tr>
+ </table>
 </body>
 </html>
