--- a/index.html
+++ b/index.html
@@ -12,20 +12,27 @@
     <th>City</th>
     <th>State</th>
     <th>2017 estimate</th>
-    
+    </tr>
   <tr>
     <td>New York</td>
+    <td>New York</td>
     <td>8,622,698</td>
-   
+    </tr>
+   <tr>
     <td>Los Angeles</td>
+    <td>California</td>
+    <td>3,999,759</td>
+    </tr>
+   <tr>
     <td>Chicago</td>
-    <td>Houston</td>
-  </tr>
-  <tr>
+    <td>Illinois</td>
+    <td></td>
+   </tr>
    
+  <tr>
     <td>California</td>
     <td>Illinois</td>
-    <td>Texas</td>
+    <td>2,716,450</td>
     >2017</tr>
   <tr>
 
