Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -26,7 +26,20 @@
    <tr>
     <td>Chicago</td>
     <td>Illinois</td>
+    <td></td>
+   </tr>
+   
+  <tr>
+    <td>California</td>
+    <td>Illinois</td>
     <td>2,716,450</td>
+    >2017</tr>
+  <tr>
+
+ <td>8,622,698</td>
+ <td>3,999,759</td>
+ <td>2,716,450</td>
+ </tr>
  </table>
 </body>
 </html>
