--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
    <tr>
     <td>Chicago</td>
     <td>Illinois</td>
-    <td></td>
+    <td>2,716,450</td>
    </tr>
    
   <tr>
-    <td>California</td>
+    <td>Chicago</td>
     <td>Illinois</td>
     <td>2,716,450</td>
     </tr>
